# gmail-mcp-multi-use

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  TRACES.md  docker-compose.prod.yml  docker-compose.yml  gmail-mcp-prd-with-claude-chat.md  gmail-multi-user-dev-mcp-prd_1.md  gmail_config.yaml.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/api/: library.md  mcp-prompts.md  mcp-resources.md  mcp-tools.md
docs/guides/: deployment.md  mcp-integration.md  multi-user.md  oauth-setup.md  quickstart.md
gmail_mcp_server/: __init__.py  __main__.py  cli.py  server.py
gmail_mcp_server/prompts/: __init__.py  build_agent.py  connect.py  diagnose.py  generate_ui.py  setup.py
gmail_mcp_server/resources/: __init__.py  config.py  docs.py  gmail.py  users.py
gmail_mcp_server/tools/: __init__.py  auth.py  manage.py  read.py  setup.py  write.py
gmail_multi_user/: __init__.py  config.py  exceptions.py  logging.py  service.py  types.py
gmail_multi_user/gmail/: __init__.py  client.py  composer.py  parser.py
gmail_multi_user/oauth/: __init__.py  google.py  local_server.py  manager.py  pkce.py  state.py
gmail_multi_user/sandbox/: __init__.py  mock_gmail.py  mock_oauth.py  mode.py
gmail_multi_user/storage/: __init__.py  base.py  factory.py  sqlite.py  supabase.py
gmail_multi_user/tokens/: __init__.py  encryption.py  manager.py
how-to/: 01-personal-local-setup.md  02-personal-claude-desktop.md  03-production-agent-setup.md  04-google-oauth-setup.md  05-troubleshooting.md  06-docker-deployment.md  README.md
migrations/sqlite/: 001_initial.sql
migrations/supabase/: 001_initial.sql
scripts/: test_gmail_read.py  test_gmail_write.py  test_oauth_flow.py  test_supabase.py
specs/: 00-overview.md
specs/01-requirements/: functional-requirements.md  non-functional-requirements.md  user-stories.md
specs/02-architecture/: api-design.md  data-model.md  security-architecture.md  system-design.md
specs/03-implementation/: approach-analysis.md  recommended-approach.md  repository-structure.md  technology-stack.md
specs/04-phase-plan/: phase-1-foundation.md  phase-2-oauth.md  phase-3-gmail-read.md  phase-4-gmail-write.md  phase-5-supabase.md  phase-6-mcp-server.md  phase-7-polish.md  phase-8-release.md
specs/05-testing/: ci-cd-pipeline.md  test-cases.md  testing-strategy.md
specs/06-appendix/: glossary.md  google-oauth-reference.md  mcp-protocol-reference.md
templates/: oauth_error.html  oauth_success.html
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_security.py  test_storage_integration.py
tests/unit/: __init__.py  test_composer.py  test_config.py  test_encryption.py  test_gmail_api.py  test_gmail_write.py  test_logging.py  test_oauth.py  test_oauth_manager.py  test_parser.py  test_sandbox.py  test_service.py  test_service_write.py  test_storage_factory.py  test_storage_sqlite.py  test_storage_supabase.py  test_token_manager.py  test_tokens.py
traces/archive/: milestone-1.md
