[project]
name = "gmail-multi-user-mcp"
version = "0.1.0"
description = "Multi-user Gmail integration library and MCP server"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aakash", email = "aakash@example.com"},
]
requires-python = ">=3.10"
keywords = [
    "gmail",
    "oauth",
    "mcp",
    "model-context-protocol",
    "ai-agents",
    "email",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    # HTTP & Async
    "httpx>=0.27.0",
    "anyio>=4.0.0",

    # MCP
    "fastmcp>=0.1.0",

    # Google APIs
    "google-api-python-client>=2.150.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",

    # Database
    "aiosqlite>=0.20.0",
    "supabase>=2.10.0",

    # Security
    "cryptography>=43.0.0",

    # Configuration
    "pyyaml>=6.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.9.0",

    # Utilities
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "pytest-timeout>=2.3.0",

    # Type checking
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",

    # Formatting & Linting
    "black>=24.10.0",
    "isort>=5.13.0",
    "ruff>=0.7.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/gmail-multi-user-mcp"
Documentation = "https://gmail-multi-user-mcp.readthedocs.io"
Repository = "https://github.com/yourorg/gmail-multi-user-mcp"
Changelog = "https://github.com/yourorg/gmail-multi-user-mcp/blob/main/CHANGELOG.md"

[project.scripts]
gmail-mcp = "gmail_mcp_server.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gmail_multi_user", "gmail_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "gmail_multi_user/",
    "gmail_mcp_server/",
    "migrations/",
    "templates/",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["gmail_multi_user", "gmail_mcp_server"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

# Mypy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "google.*",
    "googleapiclient.*",
    "supabase.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests requiring real Gmail",
]

# Coverage configuration
[tool.coverage.run]
source = ["gmail_multi_user", "gmail_mcp_server"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
